--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,49 @@
+# Python Caches
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.pytest_cache/
+.mypy_cache/
+
+# Distribution
+dist/
+dist_enterprise/
+build/
+*.egg-info/
+
+# Global Data Exclusion (STRICT)
+**/data/
+
+# Project Specific Artifacts
+files/
+generated/
 internal.yaml
 internal-flow.yaml
-data_internal/
+seed-*.yaml
+*.mmd
+ingested_components.yaml
+ingested_relationships.yaml
+ingested_flows.yaml
 
-dist/internal-flow.yaml
-temp.txt
-examples/person_onboarding/data/components/onboarding_components.yaml
-dist/
+# Specific Example Folders (Redundant but safe)
 examples/person_onboarding/
-dist_enterprise/
-__pycache__/
+examples/enterprise/
+
+# IDE
+.vscode/
+.idea/
+.DS_Store
